wp-content/themes/tcs-responsive/css/challenge-results.css
/* ... */
        .develop #winner .competitionDetails > div h2{
            color: #228400;
        }
        #winner .competitionDetails > div div.values{
            display: inline-block;
            padding: 15px 20px 0;
            height: 67px;
        }
        .TC #winner .competitionDetails > div div.values{
            padding: 15px 10px 0;
        }
        .develop #winner .competitionDetails > div.average div.values{
            padding: 15px 10px 0;
        }
        .TC .develop #winner .competitionDetails > div div.values{
            padding: 15px 2px 0;
        }
            #winner .competitionDetails > div div.values span.count{
                font-size: 30px;
                color: #333;
                display: block;
                line-height: 24px;
            }
                #winner .competitionDetails > div div.values span.count .sup{
                    font-size: 12px;
                    position: relative;
                    top: -10px;
                    color: #666;
                }
            #winner .competitionDetails > div div.values span.type{
                font-size: 11px;
                color: #666;
                display: block;
            }
    #winner .competitionDetails div.registrant{
        width: 170px;
    }
    .TC #winner .competitionDetails div.registrant{
        width: 100px;
    }
    .develop #winner .competitionDetails div.registrant{
        width: 114px;
    }
    .TC .develop #winner .competitionDetails div.registrant{
        width: 90px;
    }
    #winner .competitionDetails div.round{
        width: 250px;
    }
    .TC #winner .competitionDetails div.round{
        width: 300px;
    }
    .develop #winner .competitionDetails div.round{
        width: 344px;
    }
    .TC .develop #winner .competitionDetails div.round{
        width: 230px;
    }
    .develop #winner .competitionDetails div.average{
        width: 200px;
    }
    .TC .develop #winner .competitionDetails div.average{
        width: 155px;
    }
    #winner div.note{
        font-size: 12px;
        color: #999;
        text-align: center;
        text-transform: uppercase;
        padding: 20px 0;
    }
    .view-challenge-result.challenge-detail .topRightTitle{
        position: absolute;
        right: 0;
        top: 0;
        width: auto;
    }
    /*registrantsTable*/
table.registrantsTable{
    width: 100%;
    display: table;
}
    table.registrantsTable th{
        height: 42px;
        vertical-align: middle;
        background: #f1f1f1;
        border-bottom: 1px solid #E7E7E7;
    }
    table.registrantsTable th.leftAlign{
        text-align: left;
        padding-left: 20px;
    }
    .TC table.registrantsTable th.leftAlign{
        padding-left: 10px;
    }
        table.registrantsTable th a{
            color: #666;
            font-size: 12px;
            padding-bottom: 10px;
            background: url("../i/sort-arrows.png") no-repeat 50% 15px;
        }
    table.registrantsTable td{
        height: 42px;
        vertical-align: middle;
        padding-left: 20px;
        font-size: 14px;
        color: #666;
        border-bottom: 1px solid #e7e7e7;
        text-align: center;
    }
    .TC table.registrantsTable td{
        padding-left: 10px;
    }
    #winner table.registrantsTable td{
        height: 50px;
    }
    table.registrantsTable .alt td{
        background: #f7f7f7;
    }
    table.registrantsTable td.leftAlign{
        text-align: left;
    }
        table.registrantsTable td span.pass{
            color: #228400;
        }
        table.registrantsTable td span.fail{
            color: #b40101;
        }
/* ... */

